--- a/config_template.yaml
+++ b/config_template.yaml
@@ -3,8 +3,19 @@
 # Input files (required)
 input:
   contigs: "/path/to/contigs.fa"           # Assembly contigs FASTA file
-  hic_r1: "/path/to/hic_R1.fastq.gz"      # Hi-C reads forward
-  hic_r2: "/path/to/hic_R2.fastq.gz"      # Hi-C reads reverse
+  
+  # Hi-C reads - can specify single pair or multiple pairs
+  # Single pair format (for backwards compatibility):
+  # hic_r1: "/path/to/hic_R1.fastq.gz"
+  # hic_r2: "/path/to/hic_R2.fastq.gz"
+  
+  # Multiple pairs format:
+  hic_pairs:
+    - r1: "/path/to/library1_R1.fastq.gz"
+      r2: "/path/to/library1_R2.fastq.gz"
+    - r1: "/path/to/library2_R1.fastq.gz"
+      r2: "/path/to/library2_R2.fastq.gz"
+    # Add more pairs as needed
 
 # Output configuration
 output:
@@ -17,7 +28,7 @@ parameters:
   java_memory: "32G"                       # Memory for Java applications
   sort_memory: "32G"                       # Memory for sorting during contact map generation
 
-  # Duplicate marking method: 'biobambam2' or 'picard'
+  # Duplicate marking method: 'biobambam2', 'picard', or 'sambamba'
   dedup_method: "biobambam2"
 
   # Generate BED file from BAM (optional)
@@ -53,7 +64,7 @@ logging:
 # parameters:
 #   threads: 32
 #   java_memory: "64G"
-#   dedup_method: "picard"
+#   dedup_method: "sambamba"
 #   generate_bed: true
 #   contact_map_method: "both"
 #   yahs:
